# target-dualentry

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
sample_data/: data.singer
target_dualentry/: __init__.py  auth.py  client.py  sinks.py  target.py
tests/: __init__.py  conftest.py  test_core.py
